--- a/web/package.json
+++ b/web/package.json
@@ -41,6 +41,7 @@
     "vue-plugin-load-script": "^1.3.2",
     "vue-router": "3.0.2",
     "vue-splitpane": "1.0.4",
+    "vue-the-mask": "^0.11.1",
     "vuedraggable": "2.20.0",
     "vuex": "3.1.0",
     "xlsx": "0.14.1"
